--- a/index.css
+++ b/index.css
@@ -361,6 +361,7 @@ a:hover {
     list-style: none;
     margin-top: -35px;
     flex-wrap: wrap;
+    max-width: 100%;
 }
 
 .trusted-by__company {
@@ -527,7 +528,7 @@ a:hover {
     display: flex;
 }
 
-@media (max-width: 1170px) {
+@media (max-width: 1200px) {
     .industries__image {
         width: 200px;
         overflow: hidden;
@@ -544,9 +545,6 @@ a:hover {
     -o-object-fit: cover;
     object-fit: cover;
     width: auto;
-    margin: 0 auto;
-    position: absolute;
-    left: -50%;
 }
 
 .industries__info__block {
@@ -586,6 +584,13 @@ a:hover {
     margin-left: 30px;
     z-index: 2;
     margin-right: 30px;
+}
+
+@media (max-width: 320px) {
+    .industries__info__text {
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 .industries__info__clients {
@@ -633,6 +638,12 @@ a:hover {
     min-width: 200px;
     height: 45px;
     border-radius: 8px;
+}
+
+@media (max-width: 320px) {
+    .industries__info__clients__button {
+        min-width: 100%;
+    }
 }
 
 .testimonials {
