--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,264 +1,5 @@
-* {
-  font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
-  z-index: 1;
-  position: relative;
-}
-
-html {
-  overflow-x: hidden;
-}
-
-body {
-  background: #FFFFFF;
-  overflow-x: hidden;
-}
-
-body > * {
-  margin: 0 auto;
-  z-index: 1;
-}
-
-img, video {
-  width: 100%;
-}
-
-p, h1, h2, h3 {
-  width: auto;
-}
-
-h2 {
-  font-weight: 700;
-  font-size: 2rem;
-  text-transform: uppercase;
-  text-align: center;
-  margin-top: 0;
-}
-
-h2.blue {
-  color: rgb(30, 184, 241);
-}
-
-h2.white {
-  color: #FFFFFF
-}
-
-a {
-  text-decoration: none;
-  color: black;
-  display: block;
-}
-
-a:hover {
-  cursor: pointer;
-}
-
-.container {
-  margin: 0 auto;
-}
-
-@media (min-width: 768px) {
-  .container {
-    width: 750px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-  }
-}
-
-.button {
-  color: #FFFFFF;
-  height: 30px;
-  border-radius: 5px;
-  margin: 6px;
-  padding: 2px 10px;
-  background-image: linear-gradient(79deg, rgb(208, 27, 74) 0%, rgb(255, 92, 134) 100%);
-  white-space: nowrap;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 100px;
-  font-weight: 600;
-  box-shadow: 0px 8px 43px 0px rgba(0, 0, 0, 0.21);
-  transition: box-shadow 50ms linear;
-}
-
-.button:hover {
-  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.21);
-}
-
-.button--secondary {
-  background: rgb(0, 174, 239);
-  min-width: 80px;
-}
-
-.button--medium {
-  border-radius: 8px;
-  width: 175px;
-  height: 40px;
-}
-
-.button--big {
-  background-image: linear-gradient(79deg, rgb(208, 27, 74) 0%, rgb(255, 92, 134) 100%);
-  width: 317px;
-  height: 50px;
-  font-size: 19px;
-  font-weight: 600;
-  border-radius: 8px;
-}
-
-.nav {
-  position: fixed;
-  top: 0;
-  z-index: 3;
-  background: #FFFFFF;
-  width: 100%;
-}
-
-.nav__container {
-  padding: 10px 0;
-  display: flex;
-  /*justify-content: center;*/
-  margin: 0 auto;
-  align-items: center;
-  max-width: 1170px;
-  height: 47px;
-  position: initial;
-}
-
-.nav__menu-launcher-input {
-  display: none;
-}
-
-.nav_menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.nav__menu-launcher-label {
-  display: none;
-  background-image: url("../images/burger-image.png");
-  background-color: transparent;
-  border: none;
-  background-size: 100% 100%;
-  width: 30px;
-  height: 30px;
-  margin-left: 15px;
-  margin-right: 15px;
-  min-width: 30px;
-}
-
-@media (max-width: 995px) {
-  .nav__menu-launcher-label {
-    display: block;
-  }
-}
-
-@media (max-width: 995px) {
-  .nav_menu {
-    flex-direction: column;
-    transition: 100ms ease-out;
-    height: 0;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 67px;
-    background: white;
-    width: 100vw;
-    overflow: hidden;
-  }
-
-  .nav_menu--visible {
-    height: 280px;
-  }
-}
-
-.nav__logo {
-  display: flex;
-  margin: 5px;
-  align-items: center;
-  margin-right: auto;
-  min-width: 120px;
-}
-
-.nav__button {
-  height: 23px;
-  font-weight: 400;
-  font-size: 14px;
-  margin-left: 25px;
-}
-
-.nav__button:last-child {
-  margin-left: 10px;
-}
-
-@media (max-width: 500px) {
-  .nav__button {
-    display: none;
-  }
-}
-
-.nav__button--responsive {
-  display: none;
-}
-
-@media (max-width: 500px) {
-  .nav__button--responsive {
-    display: block;
-    margin: 0;
-    text-align: center;
-    margin:  5px;
-    padding: 5px;
-  }
-}
-
-.nav__link {
-  margin: 5px;
-  padding: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  white-space: nowrap;
-  font-weight: 600;
-  font-size: 14px;
-}
-
-.nav__link:hover {
-  color: #1EB8F1;
-}
-
-.section__background-text {
-  position: absolute;
-  font-size: 390px;
-  word-wrap: unset;
-  white-space: nowrap;
-  font-weight: 900;
-  margin: 0 auto;
-  left: 50%;
-  transform: translate(-50%, 15%);
-  z-index: 0;
-  color: #FAFAFA;
-  user-select: none;
-  opacity: 0.8;
-}
-
-.section__background-text--blue {
-  color: #104A7B;
-  opacity: 0.7;
-}
-
-.section__background-text--numbers {
-  top: 40%;
-}
+@import "styles/common";
+@import "styles/footer";
+@import "styles/nav";
+@import "styles/section";
+@import "styles/button";
