--- a/src/nav.hbs
+++ b/src/nav.hbs
@@ -29,7 +29,7 @@
                 Clients
             </a>
 
-            <a href="https://meetingapplication.com/pricing-2/pricing.hbs" class="nav__link">
+            <a href="https://meetingapplication.com/pricing-2/" class="nav__link">
                 Pricing
             </a>
 
