enchance i trusted by na pricingu

--- a/src/pricing/pricing.hbs
+++ b/src/pricing/pricing.hbs
@@ -6,14 +6,9 @@
 
 {{> ../nav }}
 
-{{> ../index/hero }}
-{{> ../index/trusted-by }}
-{{> ../index/features }}
-{{> ../index/industries }}
-{{> ../index/testimonials }}
-{{> ../index/free-trial }}
-{{> ../index/support }}
-{{> ../index/blog }}
+{{> free-trial }}
+
+{{> trusted-by }}
 
 {{> ../footer }}
 
