header na pricingu

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -38,7 +38,8 @@
     min-width: 80px;
   }
 
-  &--blue {
-
+  &--empty {
+    background-image: none;
+    border: 2px solid rgb(208, 27, 74);
   }
 }
