--- a/src/index/index.scss
+++ b/src/index/index.scss
@@ -8,9 +8,8 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-}
 
-.hero__content {
+  &__content {
     position: absolute;
     max-width: 100%;
     display: flex;
@@ -18,26 +17,26 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-}
+  }
 
-.hero__image {
+  &__image {
     z-index: -1;
     width: 100%;
     object-fit: cover;
     filter: brightness(.5);
     height: calc(100vh - 230px);
-}
+  }
 
-.hero__button {
+  &__button {
     max-width: 230px;
     max-height: 40px;
     margin: 0 auto;
     margin-top: 35px;
     width: auto;
     margin-bottom: 110px;
-}
+  }
 
-.hero__text {
+  &__text {
     color: #FFFFFF;
     font-size: 50px;
     margin: 0 auto;
@@ -45,6 +44,7 @@
     word-wrap: break-word;
     max-width: 700px;
     margin-top: auto;
+  }
 }
 
 @media (max-width: 900px) {
