--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -28,8 +28,9 @@
     padding-left: 4px;
     padding-right: 4px;
     font-weight: 400;
-    font-size: 12px;
-    width: 125px;
+    font-size: 14px;
+    width: 180px;
+    height: 40px;
     margin: 6px auto;
     margin-top: 25px;
     border-radius: 8px;
