poprawki app types

--- a/src/pricing/app-types/app-types.hbs
+++ b/src/pricing/app-types/app-types.hbs
@@ -6,153 +6,171 @@
     <p class="section__background-text app-types__background-text">
         APP TYPES
     </p>
+    
+    <div class="app-types__type-container">
+        <div class="app-types__logo">
+            <img  src="../../images/app-types-logo.png">
+        </div>
 
-    <div class="app-types__type">
-        <h2 class="app-types__name">
-            PLUS
-        </h2>
+        <div class="app-types__small-container">
+            <div class="app-types__type">
+                <div class="app-types__type-name-container">
+                    <h2 class="app-types__name">
+                        PREMIUM
+                    </h2>
 
-        <span class="app-types__info">
-            One year license for 1 event
-        </span>
+                    <span class="app-types__info">
+                        One year license for 1 event
+                    </span>
+                </div>
 
-        <span class="app-types__name-description">
-            Suspendise a Suspendise a Suspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise a
-        </span>
+                <span class="app-types__name-description">
+                    Suspendise a Suspendise a Suspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise a
+                </span>
 
-        <span class="app-types__price">
-            $ 999
-        </span>
+                <span class="app-types__price">
+                    $ 999
+                </span>
 
-        <ul class="app-types__features-list">
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                <ul class="app-types__features-list">
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
-        </ul>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
+                </ul>
 
-        <a class="button app-types__button app-types__button--black">
-            TEST FOR FREE FOR 14 DAYS
-        </a>
-    </div>
+                <a class="button app-types__button app-types__button--black">
+                    TEST FOR FREE FOR 14 DAYS
+                </a>
+            </div>
 
-    <div class="app-types__type">
-        <h2 class="app-types__name">
-            PLUS
-        </h2>
+            <div class="app-types__type app-types__type--premium">
+                <div class="app-types__type-name-container app-types__type-name-container--premium">
+                    <h2 class="app-types__name app-types__name--premium">
+                        PREMIUM
+                    </h2>
 
-        <span class="app-types__info">
-            One year license for 1 event
-        </span>
+                    <span class="app-types__info">
+                        One year license for 1 event
+                    </span>
+                </div>
 
-        <span class="app-types__name-description">
-            Suspendise a Suspendise a Suspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise a
-        </span>
+                <span class="app-types__name-description">
+                    Suspendise a Suspendise a Suspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise a
+                </span>
 
-        <span class="app-types__price">
-            $ 999
-        </span>
+                <span class="app-types__price app-types__price--premium">
+                    $ 999
+                </span>
 
-        <ul class="app-types__features-list">
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                <ul class="app-types__features-list">
+                    <div class="app-types__feature-list-header">
+                        FEATURES FROM
+                        <span class="app-types__feature-list-header--blue">PLUS</span>
+                        +
+                    </div>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
-        </ul>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
 
-        <a class="button app-types__button">
-            TEST FOR FREE FOR 14 DAYS
-        </a>
+                    <li class="app-types__feature">
+                        <img src="../../images/agenda.png" />
+                        Agenda
+                    </li>
+                </ul>
+
+                <a class="button app-types__button">
+                    TEST FOR FREE FOR 14 DAYS
+                </a>
+            </div>
+        </div>
     </div>
 
     <div class="app-types__or">
@@ -161,77 +179,93 @@
         </span>
     </div>
 
-    <div class="app-types__type">
-        <h2 class="app-types__name">
-            PLUS
-        </h2>
 
-        <span class="app-types__info">
-            One year license for 1 event
-        </span>
+    <div class="app-types__type-container">
+        <div class="app-types__logo">
+            <img  src="../../images/app-types-logo.png">
+        </div>
 
-        <span class="app-types__name-description">
-            Suspendise a Suspendise a Suspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise a
-        </span>
+        <div class="app-types__type">
+            <div class="app-types__type-name-container">
+                <h2 class="app-types__name">
+                    PREMIUM
+                </h2>
 
-        <span class="app-types__price">
-            $ 999
-        </span>
+                <span class="app-types__info">
+                    One year license for 1 event
+                </span>
+            </div>
 
-        <ul class="app-types__features-list">
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+            <span class="app-types__name-description">
+                Suspendise a Suspendise a Suspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise aSuspendise a
+            </span>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+            <span class="app-types__price">
+                $ 999
+            </span>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+            <ul class="app-types__features-list">
+                <div class="app-types__feature-list-header">
+                    FEATURES FROM
+                    <span class="app-types__feature-list-header--blue">PREMIUM</span>
+                    +
+                </div>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
 
-            <li class="app-types__feature">
-                <img src="../../images/agenda.png" />
-                Agenda
-            </li>
-        </ul>
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
 
-        <a class="button app-types__button app-types__button--black">
-            TEST FOR FREE FOR 14 DAYS
-        </a>
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
+
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
+
+                <li class="app-types__feature">
+                    <img src="../../images/agenda.png" />
+                    Agenda
+                </li>
+            </ul>
+
+            <a class="button app-types__button app-types__button--black">
+                TEST FOR FREE FOR 14 DAYS
+            </a>
+        </div>
     </div>
+
 </section>
