--- a/src/pricing/hero/hero.hbs
+++ b/src/pricing/hero/hero.hbs
@@ -14,7 +14,7 @@
             </div>
             <div class="pricing-hero__app-description">
                 <div class="pricing-hero__company-logo">
-                    <img src="../../images/ikony_pricing/1_dhl.png" />
+                    <img  src="../../images/app-types-logo.png">
                 </div>
 
                 <span class="pricing-hero__company-name">
