--- a/src/pricing/app-types/app-types.hbs
+++ b/src/pricing/app-types/app-types.hbs
@@ -84,7 +84,7 @@
                     </li>
                 </ul>
 
-                <a class="button app-types__button app-types__button--black">
+                <a  href="https://meetingapplication.com/get-your-app?type=plus" class="button app-types__button app-types__button--black">
                     TEST FOR FREE FOR 14 DAYS
                 </a>
             </div>
@@ -166,7 +166,7 @@
                     </li>
                 </ul>
 
-                <a class="button app-types__button">
+                <a  href="https://meetingapplication.com/get-your-app?type=premium" class="button app-types__button">
                     TEST FOR FREE FOR 14 DAYS
                 </a>
             </div>
@@ -181,8 +181,13 @@
 
 
     <div class="app-types__type-container">
-        <div class="app-types__logo">
-            <img  src="../../images/app-types-logo.png">
+        <div class="app-types__logo change-icon-interval">
+            <img src="../../images/ikony_pricing/1_dhl.png" />
+            <img src="../../images/ikony_pricing/2_care.png" />
+            <img src="../../images/ikony_pricing/3_raindance.png" />
+            <img src="../../images/ikony_pricing/4_santander.png" />
+            <img src="../../images/ikony_pricing/5_sunny side.png" />
+            <img src="../../images/ikony_pricing/6_eu com.png" />
         </div>
 
         <div class="app-types__type">
@@ -262,7 +267,7 @@
                 </li>
             </ul>
 
-            <a class="button app-types__button app-types__button--black">
+            <a href="https://meetingapplication.com/get-your-app?type=standalone" class="button app-types__button app-types__button--black">
                 TEST FOR FREE FOR 14 DAYS
             </a>
         </div>
