--- a/src/pricing/difference/difference.hbs
+++ b/src/pricing/difference/difference.hbs
@@ -12,14 +12,14 @@
             <div>
                 <img src="../../images/application-meeting.png" />
 
-                <a class="button button--small">
+                <a onclick="gotoAppTypes()" class="button button--small">
                     I CHOOSE THIS
                     <img class="core-features__button__icon" src="../../images/next.svg" />
                 </a>
             </div>
             <div class="difference__app-description">
                 <div class="difference__company-logo">
-                    <img src="../../images/ikony_pricing/1_dhl.png" />
+                    <img src="../../images/app-types-logo.png" />
                 </div>
 
                 <span class="difference__company-name">
@@ -40,8 +40,13 @@
 
         <div class="difference__app difference__app--right">
             <div class="difference__app-description difference__app-description--right">
-                <div class="difference__company-logo">
+                <div class="difference__company-logo change-icon-interval">
                     <img src="../../images/ikony_pricing/1_dhl.png" />
+                    <img src="../../images/ikony_pricing/2_care.png" />
+                    <img src="../../images/ikony_pricing/3_raindance.png" />
+                    <img src="../../images/ikony_pricing/4_santander.png" />
+                    <img src="../../images/ikony_pricing/5_sunny side.png" />
+                    <img src="../../images/ikony_pricing/6_eu com.png" />
                 </div>
 
                 <span class="difference__company-name">
@@ -61,7 +66,7 @@
             <div>
                 <img src="../../images/application-meeting.png" />
 
-                <a class="button button--small">
+                <a onclick="gotoAppTypes()" class="button button--small">
                     I CHOOSE THIS
                     <img class="core-features__button__icon" src="../../images/next.svg" />
                 </a>
