--- a/src/pricing/free-trial.hbs
+++ b/src/pricing/free-trial.hbs
@@ -7,9 +7,9 @@
         YOUR EVENT?
     </h2>
 
-    <a href="https://meetingapplication.com/get-your-app/"
+    <a onclick="gotoAppTypes()"
        class="button button--secondary button--big ">
-        START FREE TRIAL
+        CHOOSE YOUR APP
         <img class="core-features__button__icon" src="../../images/next.svg" />
     </a>
 </section>
