--- a/src/pricing/hero/hero.hbs
+++ b/src/pricing/hero/hero.hbs
@@ -29,7 +29,7 @@
                     Maecenas malesuada elit lectus  felis, malesuada ultricies.
                 </span>
 
-                <a class="button button--medium">
+                <a onclick="gotoAppTypes()" class="button button--medium">
                     I CHOOSE THIS
                     <img class="core-features__button__icon" src="../../images/next.svg" />
                 </a>
@@ -38,8 +38,13 @@
 
         <div class="pricing-hero__app">
             <div class="pricing-hero__app-description pricing-hero__app-description--right">
-                <div class="pricing-hero__company-logo">
+                <div class="pricing-hero__company-logo change-icon-interval">
                     <img src="../../images/ikony_pricing/1_dhl.png" />
+                    <img src="../../images/ikony_pricing/2_care.png" />
+                    <img src="../../images/ikony_pricing/3_raindance.png" />
+                    <img src="../../images/ikony_pricing/4_santander.png" />
+                    <img src="../../images/ikony_pricing/5_sunny side.png" />
+                    <img src="../../images/ikony_pricing/6_eu com.png" />
                 </div>
 
                 <span class="pricing-hero__company-name">
@@ -54,7 +59,7 @@
                     Maecenas malesuada elit lectus  felis, malesuada ultricies.
                 </span>
 
-                <a class="button button--medium">
+                <a onclick="gotoAppTypes()" class="button button--medium">
                     I CHOOSE THIS
                     <img class="core-features__button__icon" src="../../images/next.svg" />
                 </a>
@@ -65,7 +70,7 @@
         </div>
     </div>
 
-    <a href="https://meetingapplication.com/get-your-app/"
+    <a onclick="gotoDifference()"
        class="button button--big pricing-hero__button button--empty">
         WHAT'S THE DIFFERENCE?
     </a>
