--- a/src/pricing/services/services.hbs
+++ b/src/pricing/services/services.hbs
@@ -62,7 +62,7 @@
     </p>
 
     <article class="services__types">
-        <div class="services__type">
+        <div class="services__type services__type--animated">
             <h3 class="services__type-name">
                 Mike Kopyra
             </h3>
@@ -76,7 +76,7 @@
             </a>
         </div>
 
-        <div class="services__type">
+        <div class="services__type services__type--animated">
             <h3 class="services__type-name">
                 Mike Kopyra
             </h3>
@@ -90,7 +90,7 @@
             </a>
         </div>
 
-        <div class="services__type">
+        <div class="services__type services__type--animated">
             <h3 class="services__type-name">
                 Mike Kopyra
             </h3>
