--- a/src/pricing/services/services.scss
+++ b/src/pricing/services/services.scss
@@ -28,6 +28,14 @@
     margin: 10px;
     z-index: 2;
     background-color: white;
+    transition: 50ms ease-in-out;
+
+    &--animated {
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+
   }
 
   &__type-name {
