--- a/src/pricing/difference/difference.hbs
+++ b/src/pricing/difference/difference.hbs
@@ -63,8 +63,18 @@
                     <li class="difference__list-element difference__list-element--right"> some </li>
                 </ul>
             </div>
-            <div>
+            <div class="difference__phone">
                 <img src="../../images/application-meeting.png" />
+
+                <div class="difference__phone-icon change-icon-interval">
+                    <img src="../../images/ikony_pricing/1_dhl.png" />
+                    <img src="../../images/ikony_pricing/2_care.png" />
+                    <img src="../../images/ikony_pricing/3_raindance.png" />
+                    <img src="../../images/ikony_pricing/4_santander.png" />
+                    <img src="../../images/ikony_pricing/5_sunny side.png" />
+                    <img src="../../images/ikony_pricing/6_eu com.png" />
+                </div>
+
 
                 <a onclick="gotoAppTypes()" class="button button--small">
                     I CHOOSE THIS
