--- a/src/pricing/hero/hero.hbs
+++ b/src/pricing/hero/hero.hbs
@@ -64,8 +64,17 @@
                     <img class="core-features__button__icon" src="../../images/next.svg" />
                 </a>
             </div>
-            <div>
+            <div class="pricing-hero__phone">
                 <img src="../../images/application-dhl.png" />
+
+                <div class="pricing-hero__phone-icon change-icon-interval">
+                    <img src="../../images/ikony_pricing/1_dhl.png" />
+                    <img src="../../images/ikony_pricing/2_care.png" />
+                    <img src="../../images/ikony_pricing/3_raindance.png" />
+                    <img src="../../images/ikony_pricing/4_santander.png" />
+                    <img src="../../images/ikony_pricing/5_sunny side.png" />
+                    <img src="../../images/ikony_pricing/6_eu com.png" />
+                </div>
             </div>
         </div>
     </div>
